Switch spacing for inline radio & checkbox elements Fixes bug https://issues.redhat.com/browse/OCPBUGS-2735?filter=12401482

--- a/frontend/packages/operator-lifecycle-manager/src/style.scss
+++ b/frontend/packages/operator-lifecycle-manager/src/style.scss
@@ -306,7 +306,11 @@ $co-affinity-row-margin: 15px;
   align-items: baseline;
   display: flex;
   flex-grow: 1;
-  justify-content: flex-end;
+  flex-wrap: wrap;
+  @media (min-width: $screen-sm-min) {
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+  }
 }
 
 .co-operator-details__toggle-value {
